--- a/app/src/main/res/layout/fr_sign_up_screen.xml
+++ b/app/src/main/res/layout/fr_sign_up_screen.xml
@@ -4,14 +4,15 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/coral"
-    android:id="@+id/clFrSignUpScreen">
+    android:id="@+id/clFrSignUpScreen"
+    android:paddingVertical="40dp">
 
     <ImageView
         android:id="@+id/ivLogoLoad"
         android:layout_width="150dp"
         android:layout_height="75dp"
         android:src="@drawable/ic_logowhite"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/etName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -26,7 +27,6 @@
         android:hint="@string/person_name"
         android:background="@drawable/background_login_password"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="160dp"
         android:layout_marginEnd="50dp"
         android:padding="12dp"
         android:textColorHint="@color/light_gray"
@@ -34,9 +34,11 @@
         android:fontFamily="@font/rubik_regular"
         android:drawableStart="@drawable/ic_custom_person_name_icon"
         android:drawablePadding="8dp"
+        app:layout_constraintVertical_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ivLogoLoad"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/etEmail"
         android:autofillHints="textEmailAddress"
         android:inputType="textPersonName" />
 
@@ -48,7 +50,6 @@
         android:hint="@string/email"
         android:background="@drawable/background_login_password"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="30dp"
         android:layout_marginEnd="50dp"
         android:padding="12dp"
         android:textColorHint="@color/light_gray"
@@ -72,7 +73,6 @@
         android:hint="@string/password"
         android:textColorHint="@color/light_gray"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etEmail"
@@ -82,7 +82,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etPassword"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:maxEms="16"
             android:minEms="6"
             android:background="@drawable/background_login_password"
@@ -100,15 +100,13 @@
 
     <Button
         android:id="@+id/btnSignUp"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:text="@string/sign_up"
         android:textColor="@color/white"
         android:fontFamily="@font/colus_regular"
         android:background="@drawable/corners_load_window_button_sign_up"
-        android:layout_marginTop="40dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginEnd="140dp"
+        android:paddingHorizontal="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etPasswordLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +121,6 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:fontFamily="@font/rubik_regular"
-        android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -131,19 +128,14 @@
 
     <Button
         android:id="@+id/btnGoogleSignUp"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/google"
         android:textStyle="bold"
         android:textColor="@color/back_sign_up"
         android:fontFamily="@font/rubik_regular"
         android:textSize="14sp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="100dp"
-        android:paddingStart="14dp"
-        android:paddingEnd="14dp"
+        android:paddingHorizontal="20dp"
         android:background="@drawable/background_btn_google_facebook"
         android:drawableStart="@drawable/ic_google_logo_g"
         android:drawablePadding="10dp"
@@ -154,25 +146,21 @@
 
     <Button
         android:id="@+id/btnFacebookSignUp"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/facebook"
         android:textStyle="bold"
         android:textColor="@color/back_sign_up"
         android:fontFamily="@font/rubik_regular"
         android:textSize="14sp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="100dp"
-        android:paddingStart="14dp"
-        android:paddingEnd="14dp"
+        android:paddingHorizontal="12dp"
         android:background="@drawable/background_btn_google_facebook"
         android:drawableStart="@drawable/ic_facebook_logo_f"
         android:drawablePadding="10dp"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/btnGoogleSignUp"
-        app:layout_constraintTop_toBottomOf="@+id/tvOr"
+        app:layout_constraintTop_toTopOf="@id/btnGoogleSignUp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="@id/btnGoogleSignUp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
