--- a/app/src/main/res/layout/fr_more_about_post.xml
+++ b/app/src/main/res/layout/fr_more_about_post.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/clMoreFragment"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
