--- a/app/src/main/res/layout/fr_splash_screen.xml
+++ b/app/src/main/res/layout/fr_splash_screen.xml
@@ -24,6 +24,7 @@
         android:text="@string/login"
         android:textColor="@color/back_sign_up"
         android:fontFamily="@font/colus_regular"
+        android:paddingHorizontal="30dp"
         android:background="@drawable/corners_load_window_button_login"
         app:layout_constraintVertical_bias="0.88"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +39,7 @@
         android:text="@string/sign_up"
         android:textColor="@color/white"
         android:fontFamily="@font/colus_regular"
+        android:paddingHorizontal="25dp"
         android:background="@drawable/corners_load_window_button_sign_up"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/btnLogin"
