--- a/app/src/main/res/layout/cv_horizontal_block_news.xml
+++ b/app/src/main/res/layout/cv_horizontal_block_news.xml
@@ -11,15 +11,18 @@
         android:layout_height="250dp"
         android:layout_marginStart="20dp"
         app:cardBackgroundColor="@android:color/transparent"
-        app:cardCornerRadius="20dp"
+        app:cardCornerRadius="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:cardElevation="6dp">
+        android:elevation="6dp"
+        android:clickable="true"
+        android:focusable="true">
 
         <RelativeLayout
             android:id="@+id/rlHorizontalBlockNews"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:elevation="6dp">
 
             <ImageView
                 android:id="@+id/ivImageHorizontalBlockNews"
