--- a/app/src/main/res/layout/cv_vertical_block_news.xml
+++ b/app/src/main/res/layout/cv_vertical_block_news.xml
@@ -12,7 +12,9 @@
         app:cardElevation="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/corners_header_block_news">
+        android:background="@drawable/corners_header_block_news"
+        android:clickable="true"
+        android:focusable="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
